--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="Home.html" class="nav-link">Home</a>
+                <li><a href="index.html" class="nav-link">Home</a>
                     <div class="active-dot"></div>
                 </li>
                 <li><a href="About.html" class="nav-link active">About</a>
